@@ -26,6 +26,7 @@ src/totem-screenshot.c
 src/totem-sidebar.c
 src/totem-statusbar.c
 src/totem-subtitle-encoding.c
+src/totem-video-thumbnailer.c
 src/totem-time-label.c
 src/totem-uri.c
 src/totem.c
