@@ -1,3 +1,7 @@
+2008-12-15  Bastien Nocera  <hadess@hadess.net>
+
+	* POTFILES.in: Add the thumbnailer to the translated files
+
 2008-12-12  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Imported updated translation from gnome-2-24 branch.
