@@ -1,3 +1,8 @@
+2008-12-15  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-video-thumbnailer.c (create_gallery):
+	Fix warning, and translate headers when creating a gallery
+
 2008-12-15  Philip Withnall  <philip@tecnocode.co.uk>
 
 	* src/totem-video-thumbnailer.c (scale_pixbuf), (save_pixbuf),
